--- a/app/core/components/main/main.html
+++ b/app/core/components/main/main.html
@@ -1,1 +1,23 @@
-<h1>aqui el main</h1>
+<nav style="margin-bottom: 20px;" class="nav has-shadow">
+  <div class="nav-left">
+    <a class="nav-item is-tab ">
+      <img src="images/tako_.png">
+    </a>
+    <a class="nav-item is-tab is-active">Home</a>
+  </div>
+  <div class="nav-center"></div>
+  <div class="nav-right"></div>
+</nav>
+
+<div class="container">
+  <div class="columns">
+    <div class="column is-two-thirds">
+      <div class="box">
+        <map-dash></map-dash>
+      </div>
+    </div>
+    <div class="column">
+      <div class="box"></div>
+    </div>
+  </div>
+</div>
