--- a/app/core/components/main/main.html
+++ b/app/core/components/main/main.html
@@ -83,6 +83,8 @@
 
               <div class="media-content">
                 <a>{{::driver.name}}</a>
+
+                <a ng-click="vm.deleteDriver(driver)" class="delete is-small"></a>
               </div>
 
               <div class="media-right">
@@ -139,11 +141,9 @@
 
               <div class="media-content">
                 {{::client.name}}
-              </div>
-
-              <div class="media-right">
                 <a ng-click="vm.deleteClient(client)" class="delete is-small"></a>
               </div>
+             
             </div>
           </div>
         </div>
